test_suite5/ALAN/test_suite/alan-2022-examples/failing/009290_mutation.alan
source w1Y leave z() begin relax end begin relax end
